--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-sentence-transformers==2.2.2
 langchain
 flask
 pypdf
 python-dotenv
-pinecone[grpc]
+pinecone-client>=3.0.0
 langchain-pinecone
-langchain_community
-langchain_openai
-langchain_experimental
+langchain-community
+langchain-openai
+langchain-experimental
+langchain-huggingface
+sentence-transformers
 -e .
